# kim-1-programmable-memory-card

./: .gitmodules  LICENSE.md  README.md  fp-lib-table  kim-1-programmable-memory.kicad_pro  sym-lib-table
firmware/: CMakeLists.txt  LICENSE.md  README.md  config.c  config.h  debug.h  disk.c  disk.h  dma.c  dma.h  dmacfg.c  dmacfg.h  fdc.c  fdc.h  httpd.c  httpd.h  httpd_opts.h  httpd_structs.h  imd.c  imd.h  lwipopts.h  main.c  mememu.c  mememul.c  mememul.h  mememul.pio  memmap_custom.ld  pins.h  piocfg.c  piocfg.h  protos.h  upd765.h  vga.pio  video.c  video.h  video.pio  webserver.c  webserver.h  wlan.c  wlan.h
firmware/fatfs/: CMakeLists.txt  NOTES  f_util.c  f_util.h  glue.c  spi_sdmmc.c  spi_sdmmc.h
firmware/fatfs/ff15/source/: ffconf.h
firmware/picowi/: CMakeLists.txt  README.md  picowi.h  picowi_defs.h  picowi_dhcp.c  picowi_join.c  picowi_join.h  picowi_net.c  picowi_net.h  picowi_pico.h  picowi_tcp.c  picowi_web.c  picowi_web.h  picowi_wifi.c  picowi_wifi.h
footprints/Button-Switch_Library.pretty/: SW_SPST_TL3305A.kicad_mod
footprints/RPi_Pico.pretty/: RPi_PicoW_SMD.kicad_mod
gerber/: kim-1-programmable-memory-B_Mask.gbr  kim-1-programmable-memory-B_Silkscreen.gbr  kim-1-programmable-memory-F_Cu.gbr  kim-1-programmable-memory-F_Paste.gbr  kim-1-programmable-memory-F_Silkscreen.gbr  kim-1-programmable-memory.drl
hardware/: LICENSE.md  fp-lib-table  kim-1-programmable-memory.kicad_dru  kim-1-programmable-memory.kicad_pcb  kim-1-programmable-memory.kicad_prl  kim-1-programmable-memory.kicad_pro  kim-1-programmable-memory.kicad_sch
hardware/3dmodels/: LICENSE.md  Micro_SD_Card_and_Holder.stp
hardware/footprints/CUI_Devices.pretty/: CUI_RCJ-014.kicad_mod
hardware/footprints/MTU_Library.pretty/: EDGE_CONN.kicad_mod
hardware/footprints/Micro-SD_Library.pretty/: SD_Card_Holder_SMD_WQ21801-B2180-7F.kicad_mod
hardware/footprints/RPi_Pico.pretty/: RPi_PicoW_SMD.kicad_mod
hardware/footprints/SOIC_Library.pretty/: SOIC-14_3.9x8.7mm_P1.27mm.kicad_mod
hardware/gerber/: kim-1-programmable-memory-B_Cu.gbr  kim-1-programmable-memory-B_Mask.gbr  kim-1-programmable-memory-B_Paste.gbr  kim-1-programmable-memory-B_Silkscreen.gbr  kim-1-programmable-memory-Edge_Cuts.gbr  kim-1-programmable-memory-F_Cu.gbr  kim-1-programmable-memory-F_Mask.gbr  kim-1-programmable-memory-F_Paste.gbr  kim-1-programmable-memory-F_Silkscreen.gbr  kim-1-programmable-memory-In1_Cu.gbr  kim-1-programmable-memory-In2_Cu.gbr  kim-1-programmable-memory-NPTH-drl_map.ps  kim-1-programmable-memory-NPTH.drl  kim-1-programmable-memory-PTH-drl_map.ps  kim-1-programmable-memory-PTH.drl  kim-1-programmable-memory-drl_map.ps  kim-1-programmable-memory.drl
hardware/kim-1-mtu/: README.md  fp-lib-table  kim-1-programmable-memory.kicad_pcb  kim-1-programmable-memory.kicad_prl  kim-1-programmable-memory.kicad_pro  kim-1-programmable-memory.kicad_sch  sym-lib-table
hardware/kim-1-mtu/docs/: bom.csv  positions.csv
hardware/kim-1-mtu/gerber/: kim-1-programmable-memory-F_Cu.gbr  kim-1-programmable-memory-F_Paste.gbr  kim-1-programmable-memory-F_Silkscreen.gbr  kim-1-programmable-memory-NPTH-drl_map.ps  kim-1-programmable-memory-NPTH.drl
hardware/libs/3dmodels/: CUI_DEVICES_RCJ-014.step  Ceramic Cap, 5mm lead spacing, 4mm width, and 5.5mm tall, v4 v2.step  Jumper-green.step  LICENSE.md  res-1_4w-150R-7.62mm.wrl  res-1_4w-270R-7.62mm.wrl  res-1_4w-470R-7.62mm.wrl  res-1_4w-47R-7.62mm.wrl  sd-module-small.wrl
hardware/libs/footprints/Button-Switch_Library.pretty/: SW_SPST_TL3305A.kicad_mod
hardware/libs/footprints/CUI_Devices.pretty/: CUI_RCJ-014.kicad_mod
hardware/libs/footprints/KIM1_Library.pretty/: KIM_EDGE.kicad_mod
hardware/libs/footprints/Micro-SD_Library.pretty/: SD_Card_Holder_SMD_WQ21801-B2180-7F.kicad_mod
hardware/libs/footprints/PAL2_Library.pretty/: PinHeader_2x22_P2.54mm_Horizontal.kicad_mod  PinSocket_2x22_P2.54mm_Horizontal.kicad_mod
hardware/libs/footprints/RPi_Pico.pretty/: RPi_PicoW_SMD.kicad_mod  RPi_PicoW_SMD_TH.kicad_mod
hardware/libs/footprints/SDModule_Library.pretty/: SD_Module_Small.kicad_mod
hardware/libs/symbols/: KIM1_Library.kicad_sym  MTU_Library.kicad_sym  PAL2_Library.kicad_sym
hardware/pal-2/: README.md  fp-lib-table  kim-1-programmable-memory.kicad_dru  kim-1-programmable-memory.kicad_pcb  kim-1-programmable-memory.kicad_prl  kim-1-programmable-memory.kicad_pro  kim-1-programmable-memory.kicad_sch  sym-lib-table
hardware/pal-2-kim-adapter/: README.md  fp-lib-table  pal-2-kim-adapter.kicad_pcb  pal-2-kim-adapter.kicad_prl  pal-2-kim-adapter.kicad_pro  pal-2-kim-adapter.kicad_sch  sym-lib-table
hardware/pal-2-kim-adapter/gerber/: pal-2-kim-adapter-B_Cu.gbr  pal-2-kim-adapter-B_Mask.gbr  pal-2-kim-adapter-B_Paste.gbr  pal-2-kim-adapter-B_Silkscreen.gbr  pal-2-kim-adapter-Edge_Cuts.gbr  pal-2-kim-adapter-F_Cu.gbr  pal-2-kim-adapter-F_Mask.gbr  pal-2-kim-adapter-F_Paste.gbr  pal-2-kim-adapter-F_Silkscreen.gbr  pal-2-kim-adapter-drl_map.ps  pal-2-kim-adapter-job.gbrjob  pal-2-kim-adapter.drl
hardware/pal-2/gerber/: kim-1-programmable-memory-B_Cu.gbr  kim-1-programmable-memory-B_Mask.gbr  kim-1-programmable-memory-B_Paste.gbr  kim-1-programmable-memory-B_Silkscreen.gbr  kim-1-programmable-memory-Edge_Cuts.gbr  kim-1-programmable-memory-F_Cu.gbr  kim-1-programmable-memory-F_Mask.gbr  kim-1-programmable-memory-F_Paste.gbr  kim-1-programmable-memory-F_Silkscreen.gbr  kim-1-programmable-memory-drl_map.ps  kim-1-programmable-memory.drl
hardware/symbols/: 74_1G_Library.kicad_sym  RPi_Pico.kicad_sym
tools/: Makefile  README.md  binfile.c  binfile.h  config.c  config.h  file.c  file.h  globals.h  hexdump.c  hexdump.h  hexfile.c  hexfile.h  http.c  http.h  memcfg  memcfg.c  mememul  mount.c  mount.h  read.c  read.h  resources.c  resources.h  restore.c  restore.h  scan.c  scan.h  setup.c  setup.h  str.c  str.h  uf2.c  uf2.h  write.c  write.h  yaml.c  yaml.h
